Fix user moderation dropdown clipping

--- a/src/components/user_card/user_card.scss
+++ b/src/components/user_card/user_card.scss
@@ -2,7 +2,7 @@
 
 .user-card {
   position: relative;
-  z-index: 1;
+  z-index: 10;
 
   &:hover {
     --_still-image-img-visibility: visible;
